# rparallelhash

./: BACKLOG.md  Cargo.toml  README.md
src/: checksum_verification.rs  cli.rs  file_processing.rs  hash_algorithms.rs  lib.rs  main.rs  output.rs  utils.rs
tests/vectors/: blake3.txt  generate_standards.sh  md5.txt  sha1.txt  sha256.txt  sha3-256.txt  sha3-384.txt  sha3-512.txt  sha384.txt  sha512.txt
